# rust-twitter-bot

./: .gitignore  Cargo.toml  README.md
src/: config.rs  main.rs  model.rs
