[package]
name = "exposed-passwords-twitter"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.47"
aws-sdk-s3 = "0.17"
aws-smithy-http = "0.47"
aws-types = "0.47"
dotenv = "0.15"
envy = "0.4"
humantime = "2"
humantime-serde = "1"
reqwest = { version = "0.11", features = ["rustls"] }
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
twitter-v2 = { version = "0.1", features = ["rustls-tls"] }
